// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SomeComponent should render 1`] = `
<View
  style={
    {
      "gap": 15,
    }
  }
>
  <Memo(Pressable)
    onPress={[Function]}
    style={
      {
        "backgroundColor": "orange",
        "padding": 10,
      }
    }
  >
    <Text>
      Toggle isActive
    </Text>
  </Memo(Pressable)>
  <Text>
    hello world
  </Text>
  <Text>
    Current state is: 
    inactive
  </Text>
</View>
`;

exports[`SomeComponent should render when active 1`] = `
<View
  style={
    {
      "gap": 15,
    }
  }
>
  <Memo(Pressable)
    onPress={[Function]}
    style={
      {
        "backgroundColor": "orange",
        "padding": 10,
      }
    }
  >
    <Text>
      Toggle isActive
    </Text>
  </Memo(Pressable)>
  <Text>
    hello world
  </Text>
  <Text>
    Current state is: 
    active
  </Text>
</View>
`;
